# hol4-mcp

./: .gitignore  LICENSE  pyproject.toml
hol4_mcp/: __init__.py  hol_cursor.py  hol_file_parser.py  hol_mcp_server.py  hol_session.py
hol4_mcp/pi_extension/: hol4-mcp.ts
hol4_mcp/sml_helpers/: cheat_finder.sml  tactic_prefix.sml
repo_prompt/: cursor.md  mcp_server.md  session.md
tests/: conftest.py  test_hol_file_parser.py  test_interrupt.py  test_linearize_with_spans.py  test_mcp_server.py  test_proof_timing.py  test_step_divergence.py  test_tactic_prefix.py  test_verification.py
tests/fixtures/: defn2Script.sml  defnScript.sml  suspendScript.sml
