[project]
name = "hol4-mcp"
version = "0.1.0"
description = "MCP server and tools for HOL4 theorem prover"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
hol4-mcp = "hol4_mcp.hol_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hol4_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "hol4_mcp/**/*.py",
    "hol4_mcp/**/*.ts",
    "pyproject.toml",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.force-include]
"hol4_mcp/pi_extension/hol4-mcp.ts" = "hol4_mcp/pi_extension/hol4-mcp.ts"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-n auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.8.0",
]
